Refactor: Update DokarkivClient and TransactionHelperService to use reactive types for improved asynchronous handling #deploy-test-dolly-backend